# webfreeze

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/webfreeze/: cache.py  cli.py  detector.py  inliner.py  utils.py
src/webfreeze/engine/: __init__.py  core.py  jsfidelity.py  prune.py
src/webfreeze/fetchers/: base.py  rendered.py  static.py
src/webfreeze/server/: __init__.py  app.py  cli.py  picker.js  preview.py  security.py  session.py
tests/: _golden_fixture.py  test_cache.py  test_cli_regression.py  test_detector.py  test_engine.py  test_inliner.py  test_jsfidelity.py  test_preview.py  test_prune.py  test_security.py  test_server.py  test_session.py  test_utils.py
tests/fixtures/: golden_static.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
web/src/components/: ExportButton.tsx  JsFidelityReport.tsx  OptionsPanel.tsx  PickerToolbar.tsx  PreviewFrame.tsx  UrlBar.tsx
